--- a/blocklet.yml
+++ b/blocklet.yml
@@ -9,7 +9,7 @@ did: z8ia5exZjUCbakYz9eynKwj2CdGXrWCpGdxPM
 main: dist
 author:
   name: yyy
-  email: 3228218172@qq.com
+  email: kkkycocho@outlook.com
 repository:
   type: git
   url: git+https://github.com/blocklet/create-blocklet.git
@@ -25,22 +25,22 @@ interfaces:
   - type: web
     name: publicUrl
     path: /
-    prefix: "*"
+    prefix: '*'
     port: BLOCKLET_PORT
     protocol: http
-community: ""
-documentation: ""
-homepage: ""
-license: ""
+community: ''
+documentation: ''
+homepage: ''
+license: ''
 payment:
   price: []
   share: []
 timeout:
   start: 60
 requirements:
-  server: ">=1.6.29"
-  os: "*"
-  cpu: "*"
+  server: '>=1.6.29'
+  os: '*'
+  cpu: '*'
 scripts:
   dev: npm run start
 environments: []
